Got the existing guess-format tests working correctly, including the guessing of trimming.